--- a/src/component/Home.css
+++ b/src/component/Home.css
@@ -17,7 +17,7 @@
     width: 100%;
     z-index: -1;
     margin-bottom: -150px;
-    mask-image: linear-gradient(to botom, rgba(0,0,0,1),rgba(0,0,0,0));
+    /* mask-image: linear-gradient(to botom, rgba(0,0,0,1),rgba(0,0,0,0)); */
 }
 .category_heading{
     margin-left: 30px;
